# mandelbrot

./: CMakeLists.txt  README.md
src/: mandelbrot.cpp
